# python-project-lvl1

./: .travis.yml  Makefile  README.md  pyproject.toml
brain_games/: cli.py  engine.py
brain_games.egg-info/: PKG-INFO  SOURCES.txt
brain_games/games/: __init__.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
python-project-lvl1/: .codeclimate.yml
python-project-lvl1/brain_games/: engine.py
python-project-lvl1/brain_games/games/: even.py  progression.py
python-project-lvl1/brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py
yerkebulanali_brain_games.egg-info/: PKG-INFO  SOURCES.txt
