[tool.poetry]
packages = [
    { include = "brain_games" }
]

name = "braingames"
version = "0.2.0"
description = ""
authors = ["Yerkebulan <yerkebulanali@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:even_odd"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
