[tool.poetry]
packages = [
    { include = "brain_games" }
]

name = "braingames"
version = "0.6.2"
description = ""
authors = ["Yerkebulan <yerkebulanali@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:brain_even"
brain-calc = "brain_games.scripts.brain_calc:brain_calc"
brain-gcd = "brain_games.scripts.brain_gcd:brain_gcd"
brain-progression = "brain_games.scripts.brain_progression:brain_progression"
brain-prime = "brain_games.scripts.brain_prime:brain_prime"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
